force-app/main/default/objects/Mail__c/Mail__c.object-meta.xml
<CustomObject>
    <label>Mail</label>
    <nameField>
        <label>Mail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>