force-app/main/default/objects/Mail__c/fields/Inhabitant__c.field-meta.xml
<CustomField>
    <fullName>Inhabitant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inhabitant</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Mail (Inhabitant)</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>