force-app/main/default/objects/Mail__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the piece of mail a package?</description>
    <label>Package</label>
    <type>Checkbox</type>
</CustomField>