force-app/main/default/objects/Mail__c/fields/Route_Number__c.field-meta.xml
<CustomField>
    <fullName>Route_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Number</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>