force-app/main/default/objects/Mail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mailing_Address__c</columns>
    <columns>Contact__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Route_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>